2005-01-15  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Test/testoucs.odd, Test/testp4compat.odd: explicitly delete xml:id

	* Source/ST/global.odd: make datatypes of xml:base and
	xml:lang point direct to W3C datatypes, not redirects, to simplify
	XSD output

	* Roma: add a lot more error checking and make sure it survives
	relative directories. clean up xml.xsd after creating it

	* Test/Makefile, Test/testdictionaries.xml, Test/testfs.xml, ChangeLog, Source/ST/tei2.odd, Source/ST/teicorp2.odd:
	test files and add xmlns to teiCorpus

	* Test/Makefile, Test/testdrama.xml, Test/testoucs.odd, Test/testp4compat.odd, Test/testp4compat.xml:
	fixing test xml and test odd files to work with current P5

2005-01-15  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/FS/valt.odd: group around first featureVal to get DTD right

	* Source/ST/teicorp2.odd: add xmlns attribute to teiCorpus

2005-01-14  Sebastian Rahtz  <rahtz@spqr>

	* Started work in CVS on Sourceforge

	HIC DESUNT MULTA since 2004/10/01

2004-10-01  Sebastian Rahtz  <rahtz@spqr-ibm>
	* odd2relax.xsl and teiodds.xsl: bug fixes here and there to cater
	for below
	* teicommon.xsl: some un-namespaced remnants corrected
	* classSpec.odd: allow for a <content> child, to contain a
   	   starting declaration (defaults to <notAllowed/>)
        * schemaspec.odd: add attribute "start" to generate Relax NG start
	   statements (can be NMTOKENS, for multiple choices). modules
	   do not now generate a start at all.
	* figure.odd: make url and doc attributes of figure be a choice, not allowed together
	* moduleref.odd:  make url and key attributes be a choice, not
	  allowed together. also allow children (if using @url)
	* orig.odd/reg.odd: put in correct classes for <choice>
	
2004-06-01  Sebastian Rahtz  <rahtz@computing-services.oxford.ac.uk>

	Change 43901 submitted.
	* Source/ST/st.odd: dftana and dftlink not needed; done by
	"predeclare" attribute on all classes which are needed up front.
