@@ -411,18 +411,16 @@
 	      </attDef>
 	    </attList>
 	  </elementSpec>
-	  
-	  <classSpec module="tei" type="atts" ident="tei.global"
-		     mode="replace">
+
+	  <classSpec module="tei" type="atts" ident="tei.global" mode="replace">
 	    <classes>
 	      <memberOf key="tei.linking"/>
 	      <memberOf key="tei.analysis"/>
 	    </classes>
 
 	    <attList>
-	      <attDef ident="xmlid" mode="delete"/>
 	      <attDef ident="id" mode="add">
-		<datatype><rng:data type="ID"/></datatype>
+		<datatype><rng:text/></datatype>
 	      </attDef>
 	      <attDef ident="rend"  mode="replace">
 		<datatype><rng:text/></datatype>
