@@ -35,9 +35,8 @@
 	</classes>
 	
 	<attList>
-          <attDef ident="xmlid" mode="delete"/>
 	  <attDef ident="id" mode="add">
-	    <datatype><rng:data type="ID"/></datatype>
+	    <datatype><rng:text/></datatype>
 	  </attDef>
 	  <attDef ident="rend"  mode="replace">
 	    <datatype><rng:text/></datatype>
