@@ -1,6 +1,15 @@
-2005-01-15  Sebastian Rahtz  <rahtz@spqr-ibm>
+2005-01-16  Sebastian Rahtz  <rahtz@spqr-ibm>
 
-	* Test/testoucs.odd, Test/testp4compat.odd: explicitly delete xml:id
+	* Makefile: when making normal and example schemas, omit xsd, dtd
+	and doc
+	* Roma: allow for omitting xsd, doc and dtd creation with new
+	options; define "die" function
+	* Test/testoucs.odd, Test/testp4compat.odd: when adding "id", make
+	it text, to avoid having two atts of type ID. removing xml:id
+	makes trang produce gibberish
+
+
+2005-01-15  Sebastian Rahtz  <rahtz@spqr-ibm>
 
 	* Source/ST/global.odd: make datatypes of xml:base and
 	xml:lang point direct to W3C datatypes, not redirects, to simplify
